[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/Sprites/ScissorsMiniGame/bot_sheet.png" type="Texture" id=1]
[ext_resource path="res://Assets/Sprites/ScissorsMiniGame/top_sheet.png" type="Texture" id=2]
[ext_resource path="res://Objects/ScissorsGraphics.gd" type="Script" id=3]

[sub_resource type="Animation" id=3]
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../CollisionPolygon2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -47, -50 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../CollisionPolygon2D:polygon")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ PoolVector2Array( -151, 171, -76.9214, 148.395, 0.278481, 124.812, -70.2401, 65.4472, -128.168, 90.2937, -166.279, 119.967, -175.816, 147.518, -167, 166 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "bot_anim"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../CollisionPolygon2D:polygon")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ PoolVector2Array( -151, 171, -76.9214, 148.395, 0.278481, 124.812, -70.2401, 65.4472, -128.168, 90.2937, -166.279, 119.967, -175.816, 147.518, -167, 166 ), PoolVector2Array( -150.632, 172.332, -84.3832, 145.467, -20.839, 113.309, -93.9543, 57.1475, -141.068, 84.8302, -172.125, 118.897, -177.372, 147.896, -166.726, 166.121 ), PoolVector2Array( -150.264, 173.663, -91.8449, 142.54, -41.9565, 101.807, -117.669, 48.8478, -153.967, 79.3666, -177.97, 117.826, -178.927, 148.274, -166.452, 166.242 ), PoolVector2Array( -149.896, 174.995, -99.3067, 139.612, -58.3311, 91.9646, -141.383, 40.5481, -166.867, 73.9031, -183.815, 116.755, -180.483, 148.652, -166.177, 166.363 ), PoolVector2Array( -149.529, 176.327, -106.768, 136.684, -67.0326, 84.5969, -165.097, 32.2484, -179.767, 68.4396, -189.66, 115.685, -182.038, 149.03, -165.903, 166.485 ), PoolVector2Array( -153.315, 174.193, -96.8195, 140.588, -51.9869, 94.9229, -133.478, 43.3146, -162.567, 75.7243, -183.538, 115.965, -182.543, 146.956, -169.347, 165.982 ), PoolVector2Array( -157.102, 172.06, -86.8704, 144.491, -26.5492, 108.991, -101.859, 54.3809, -145.368, 83.009, -177.417, 116.245, -183.047, 144.882, -172.791, 165.48 ), PoolVector2Array( -160.888, 169.927, -76.9214, 148.395, 0.278481, 124.812, -70.2401, 65.4472, -128.168, 90.2937, -171.295, 116.525, -183.551, 142.808, -176.234, 164.977 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../CollisionPolygon2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( -47, -50 ), Vector2( 13.5, -46 ), Vector2( 74, -42 ), Vector2( 118, -45 ), Vector2( 140, -43 ), Vector2( 105, -45 ), Vector2( 30, -46 ), Vector2( -47, -50 ) ]
}

[sub_resource type="Animation" id=1]
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../CollisionPolygon2D2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 130, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../CollisionPolygon2D2:polygon")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ PoolVector2Array( -140, 171, -76, 123, -15, 66, -105, 47, -124, 78, -136, 101, -145, 127, -147, 158 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "top_anim"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../CollisionPolygon2D2:polygon")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ PoolVector2Array( -140, 171, -76, 123, -15, 66, -105, 47, -124, 78, -136, 101, -145, 127, -147, 158 ), PoolVector2Array( -116.333, 174.333, -64.3333, 124.667, -15, 66, -106.25, 46.5, -120.5, 80.25, -128.25, 104.25, -132, 129.333, -128.333, 159.333 ), PoolVector2Array( -92.6667, 177.667, -52.6667, 126.333, -15, 66, -107.5, 46, -117, 82.5, -120.5, 107.5, -119, 131.667, -109.667, 160.667 ), PoolVector2Array( -69, 181, -41, 128, -15, 66, -108.75, 45.5, -113.5, 84.75, -112.75, 110.75, -106, 134, -91, 162 ), PoolVector2Array( -58, 180, -33, 126, -15, 66, -110, 45, -110, 87, -105, 114, -93, 141, -80, 164 ), PoolVector2Array( -78, 177, -48, 128, -15, 66, -107.667, 45.3333, -116.333, 85, -116, 110, -111, 134, -100, 155 ), PoolVector2Array( -116.667, 178, -67, 126, -15, 66, -105.333, 45.6667, -122.667, 83, -127, 106, -129.667, 132.333, -128, 158 ), PoolVector2Array( -146, 177, -84, 126, -15, 66, -103, 46, -129, 81, -138, 102, -148, 128, -152, 155 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../CollisionPolygon2D2:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 130, 0 ), Vector2( 95, 4 ), Vector2( 60, 3 ), Vector2( 36, 1 ), Vector2( 29, 0 ), Vector2( 43, 3 ), Vector2( 82, 2 ), Vector2( 130, 0 ) ]
}

[node name="GiantScissors" type="Node2D"]
script = ExtResource( 3 )

[node name="bottom_blade" type="Area2D" parent="."]
position = Vector2( -16, -4 )

[node name="tijera_bot" type="Sprite" parent="bottom_blade"]
position = Vector2( 16, 4 )
texture = ExtResource( 1 )
hframes = 5
vframes = 2

[node name="bot_anim" type="AnimationPlayer" parent="bottom_blade/tijera_bot"]
anims/RESET = SubResource( 3 )
anims/bot_anim = SubResource( 4 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="bottom_blade"]
position = Vector2( -47, -50 )
rotation = -0.436332
polygon = PoolVector2Array( -151, 171, -76.9214, 148.395, 0.278481, 124.812, -70.2401, 65.4472, -128.168, 90.2937, -166.279, 119.967, -175.816, 147.518, -167, 166 )

[node name="top_blade" type="Area2D" parent="."]
position = Vector2( -16, -4 )

[node name="tijera_top" type="Sprite" parent="top_blade"]
position = Vector2( 61, 12 )
texture = ExtResource( 2 )
hframes = 5
vframes = 2

[node name="top_anim" type="AnimationPlayer" parent="top_blade/tijera_top"]
anims/RESET = SubResource( 1 )
anims/top_anim = SubResource( 2 )

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="top_blade"]
position = Vector2( 130, 0 )
rotation = -3.14159
scale = Vector2( 1, -1 )
polygon = PoolVector2Array( -140, 171, -76, 123, -15, 66, -105, 47, -124, 78, -136, 101, -145, 127, -147, 158 )

[connection signal="body_entered" from="bottom_blade" to="." method="_on_bottom_blade_body_entered"]
[connection signal="animation_finished" from="bottom_blade/tijera_bot/bot_anim" to="." method="_on_bot_anim_animation_finished"]
